force-app/main/default/objects/Quality_Of_Care__c/Quality_Of_Care__c.object-meta.xml
<CustomObject>
    <label>Quality Of Care</label>
    <nameField>
        <displayFormat>QOC-{00000}</displayFormat>
        <label>Quality  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Of Cares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>