force-app/main/default/objects/Quality_Of_Care__c/fields/Describe_a_the_child_s_adjustment__c.field-meta.xml
<CustomField>
    <fullName>Describe_a_the_child_s_adjustment__c</fullName>
    <inlineHelpText>Describe (a) the child&apos;s adjustment to school, (b) school performance and (c) 
appropriateness of school placement</inlineHelpText>
    <label>Describe (a) the child&apos;s adjustment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>