force-app/main/default/objects/Quality_Of_Care__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notes</label>
    <referenceTo>Notes__c</referenceTo>
    <relationshipLabel>Quality Of Cares</relationshipLabel>
    <relationshipName>Quality_Of_Cares</relationshipName>
    <type>Lookup</type>
</CustomField>